--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -374,8 +374,7 @@ section {
     font-family: "Times New Roman", serif !important;
   }
 
-@media print {
-  /* show education section and list */
+  /* Show education section and list */
   .education,
   .education h2,
   .education-list,
@@ -386,7 +385,6 @@ section {
     font-size: 10pt !important;
     margin-bottom: 0.3em !important;
   }
-}
 
   /* Show Quote section and blockquote */
   .quote,
