--- a/webdevelopment/nav.css
+++ b/webdevelopment/nav.css
@@ -4,15 +4,24 @@ nav {
   position: relative;
 }
 
-/* Hamburger menu icon, hidden on desktop */
+/* Hide checkbox input */
+.nav-toggle {
+  display: none;
+}
+
+/* Hamburger icon styling */
 .hamburger {
   display: none;
   font-size: 2rem;
   cursor: pointer;
   padding: 10px;
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  z-index: 1001;
 }
 
-/* Main nav list styling */
+/* Main nav list */
 nav > ul {
   list-style-type: none;
   margin: 0;
@@ -76,14 +85,12 @@ nav li ul li a:hover {
   background-color: #e0e0e0;
 }
 
-/* Mobile tweaks */
+/* Responsive styles for tablets and phones */
 @media (max-width: 768px) {
-  /* Show hamburger menu */
   .hamburger {
     display: block;
   }
 
-  /* Hide nav menu by default */
   nav > ul {
     display: none;
     flex-direction: column;
@@ -94,8 +101,12 @@ nav li ul li a:hover {
     padding: 0;
   }
 
-  /* Show nav menu when active */
   nav > ul.active {
+    display: flex;
+  }
+
+  /* Show nav when checkbox is checked */
+  .nav-toggle:checked + .hamburger + ul {
     display: flex;
   }
 
@@ -106,16 +117,12 @@ nav li ul li a:hover {
   nav li ul {
     position: static;
     box-shadow: none;
-    display: none !important; /* Always hide dropdowns on mobile */
+    display: none !important;
   }
 
-  /* Disable hover dropdown on mobile */
-  nav li:hover > ul {
-    display: none;
-  }
-
+  nav li:hover > ul,
   nav li:focus-within > ul,
   nav li:active > ul {
-    display: none;
+    display: none !important;
   }
 }
