--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -720,9 +720,9 @@ main {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   gap: 2rem;
-  padding: 12px;
+  padding: 20px;
 }
 
 .contact-form {
